chore(package.json): 添加 prepare 脚本安装 puppeteer 浏览器

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "tsc --project tsconfig.server.json && vite build",
     "start": "node dist/index.cjs",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "pnpm dlx puppeteer browsers install chrome"
   },
   "keywords": [],
   "author": "",
